--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>
       Nyege - <br />
-      [Content Creator, Designer, Editor]
+      [Content Creator, Designer, Editor] hi! :)
     </h1>
   </body>
 </html>
