--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
       Nyege - <br />
       [Content Creator, Designer, Editor] hi! :)
     </h1>
+    <form action="https://formspree.io/f/xjvlrzje" method="POST">
+      <label>
+        Your email:
+        <input type="email" name="email" />
+      </label>
+      <label>
+        Your message:
+        <textarea name="message"></textarea>
+      </label>
+      <!-- your other form fields go here -->
+      <button type="submit">Send</button>
+    </form>
   </body>
 </html>
