--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <title>Homepage</title>
   </head>
   <body>
-    <h1>
-      Nyege - <br />
-      [Content Creator, Designer, Editor] hi! :)
-    </h1>
+    <h1>NYG - [Content Creator, Designer, Editor]</h1>
+    <p>
+      Posjedovanje više godina iskustva u vezi Grafičkog Dizajna, npr. montaža
+      video isječaka, uređivanje i komponovanje fotografija i front-end web
+      kodiranja omogućava mi da vama pomognem da realizujete svoje želje i ideje
+      na konkretan i profesionalan način. Možete me kontaktirati pomoću obrazca
+      ispod teksta ili pomoću telefonskog broja:
+    </p>
+    <br />
+    <p>+000 - 000 - 000</p>
     <form action="https://formspree.io/f/xjvlrzje" method="POST">
       <label>
         Your email:
+        <br />
         <input type="email" name="email" />
       </label>
       <br />
