Done changed tha game up...

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Smooch+Sans"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Sansita+Swashed"
+    />
     <title>Homepage</title>
   </head>
   <body>
+    <img src="./imgs/nyg logo.png" alt="logopng" />
     <h1>NYG - [Content Creator, Designer, Editor]</h1>
     <p>
       Posjedovanje više godina iskustva u vezi Grafičkog Dizajna, npr. montaža
@@ -15,7 +25,7 @@
       na konkretan i profesionalan način. Možete me kontaktirati pomoću obrazca
       ispod teksta ili pomoću telefonskog broja:
     </p>
-    <br />
+
     <p>+000 - 000 - 000</p>
     <form action="https://formspree.io/f/xjvlrzje" method="POST">
       <label>
@@ -29,6 +39,7 @@
         <br />
         <textarea name="message"></textarea>
       </label>
+      <br />
       <!-- your other form fields go here -->
       <button type="submit">Send</button>
     </form>
