dropdown menu alpha

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <title>Homepage</title>
   </head>
   <body>
+    <!-- Dropdown menu background -->
+    <div class="dropdown-background"></div>
+    <!-- Dropdown menu -->
+    <div class="dropdown">
+      <button class="dropbtn">Menu</button>
+      <div class="dropdown-content">
+        <a href="#">Homepage</a>
+        <a href="./portfolio.html">Portfolio</a>
+      </div>
+    </div>
     <!-- Logo svg -->
     <svg
       version="1.1"
@@ -52,11 +62,6 @@
       <rect y="417.831" fill="#ce0000" width="753.902" height="82.728" />
       <rect fill="#ce0000" width="753.902" height="82.728" />
     </svg>
-    <!-- Dropdown Menu -->
-    <!-- <div class="dropdown">
-      <p>juan</p>
-      <div class="dropdown-content"><p>dos</p></div>
-    </div> -->
     <!-- Logo jpg-->
     <!-- <img id="logo" src="./imgs/nyg logo.png" alt="logopng" /> -->
     <!-- Title -->
