--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/portfolio-style.css" />
+    <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Dropdown menu -->
+    <div class="dropdown-background"></div>
+    <div class="dropdown">
+      <button class="dropbtn">Menu</button>
+      <div class="dropdown-content">
+        <a href="./index.html">Homepage</a>
+        <a href="#">Portfolio</a>
+      </div>
+    </div>
+  </body>
 </html>
