--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
       rel="stylesheet"
     />
 
-    <title>Homepage</title>
+    <title>NYG Homepage</title>
   </head>
   <body>
     <!-- Dropdown menu -->
     <div class="dropdown-background"></div>
     <div class="dropdown">
-      <button class="dropbtn">Menu</button>
+      <button class="dropbtn">
+        <div class="menu-bar"></div>
+        <div class="menu-bar"></div>
+        <div class="menu-bar"></div>
+      </button>
       <div class="dropdown-content">
         <a href="#">Homepage</a>
         <a href="./portfolio.html">Portfolio</a>
