--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/portfolio-style.css" />
-    <title>Portfolio</title>
+    <title>NYG Portfolio</title>
   </head>
   <body>
     <!-- Dropdown menu -->
     <div class="dropdown-background"></div>
     <div class="dropdown">
-      <button class="dropbtn">Menu</button>
+      <button class="dropbtn">
+        <div class="menu-bar"></div>
+        <div class="menu-bar"></div>
+        <div class="menu-bar"></div>
+      </button>
       <div class="dropdown-content">
         <a href="./index.html">Homepage</a>
         <a href="#">Portfolio</a>
