column masonry fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,22 +28,29 @@
         <a href="#">Portfolio</a>
       </div>
     </div>
-    <div class="thumbnails">
-      <a href="./imgs/All_In_One3.png" target="_blank">
-        <img src="./imgs/All_In_One3.png" alt="all-in-one-err" />
-      </a>
-      <a href="./imgs/Vizitne za faks.png" target="_blank"
-        ><img src="./imgs/Vizitne za faks.png" alt="vizit-faks"
-      /></a>
-      <a href="./imgs/coelum visit.png" target="_blank"
-        ><img src="./imgs/coelum visit.png" alt="coelum-visit"
-      /></a>
-      <a href="./imgs//coelum flajer.png" target="_blank">
-        <img src="./imgs//coelum flajer.png" alt="coelum-flajer" />
-      </a>
-      <a href="./imgs/Untitled-1alternateBAKED.png" target="_blank">
-        <img src="./imgs/Untitled-1alternateBAKED.png" alt="thumbnail" />
-      </a>
+    <h1>PORTFOLIO</h1>
+    <div class="row">
+      <div class="column">
+        <a href="./imgs/All_In_One3.png" target="_blank">
+          <img src="./imgs/All_In_One3.png" alt="all-in-one-err" />
+        </a>
+        <a href="./imgs//coelum flajer.png" target="_blank">
+          <img src="./imgs//coelum flajer.png" alt="coelum-flajer" />
+        </a>
+      </div>
+      <div class="column">
+        <a href="./imgs/Vizitne za faks.png" target="_blank"
+          ><img src="./imgs/Vizitne za faks.png" alt="vizit-faks"
+        /></a>
+        <a href="./imgs/Untitled-1alternateBAKED.png" target="_blank">
+          <img src="./imgs/Untitled-1alternateBAKED.png" alt="thumbnail" />
+        </a>
+      </div>
+      <div class="column">
+        <a href="./imgs/coelum visit.png" target="_blank"
+          ><img src="./imgs/coelum visit.png" alt="coelum-visit"
+        /></a>
+      </div>
     </div>
   </body>
 </html>
