--- a/index.html
+++ b/index.html
@@ -69,24 +69,26 @@
     <!-- Logo jpg-->
     <!-- <img id="logo" src="./imgs/nyg logo.png" alt="logopng" /> -->
     <!-- Title -->
-    <h1>NYG - [Content Creator, Designer, Editor]</h1>
+    <h1>Nemanja Njegovanović - [Dizajner, Kreator, Video Montažer]</h1>
     <!-- Description -->
     <p>
-      Posjedovanje više godina iskustva u vezi Grafičkog Dizajna, npr. montaža
-      video isječaka, uređivanje i komponovanje fotografija i front-end web
-      kodiranja omogućava mi da vama pomognem da realizujete svoje želje i ideje
-      na konkretan i profesionalan način. Možete me kontaktirati pomoću obrasca
-      ispod teksta ili pomoću telefonskog broja:
+      Posjedovanje višegodišnjeg iskustva u vezi grafičkog dizajna, montaže
+      video isječaka, uređivanja i komponovanja fotografija i front-end web
+      kodiranja omogućava mi da Vam pomognem da realizujete svoje želje i ideje
+      na konkretan i profesionalan način. Možete me kontaktirati pomoću
+      telefonskog broja, e-mail adrese ili jednostavno putem obrasca na kraju
+      stranice:
     </p>
 
-    <p>+000 - 000 - 000</p>
+    <p>+38766 / 332 - 944</p>
+    <p>nncrafter@gmail.com</p>
     <!-- Contact form -->
     <div id="input-form-div">
       <form action="https://formspree.io/f/xjvlrzje" method="POST">
         <label>
           Your email:
           <br />
-          <input type="email" name="email" placeholder="Vaš E-Mail ovdje" />
+          <input type="email" name="email" placeholder="Vaša E-Mail adresa" />
         </label>
         <br />
         <label>
