--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       video isječaka, uređivanja i komponovanja fotografija i front-end web
       kodiranja omogućava mi da Vam pomognem da realizujete svoje želje i ideje
       na konkretan i profesionalan način. Možete me kontaktirati pomoću
-      telefonskog broja, e-mail adrese ili jednostavno putem obrasca na kraju
+      telefonskog broja, e-mail adrese ili jednostavno pomoću obrasca na kraju
       stranice:
     </p>
 
