--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     <!-- Logo jpg-->
     <!-- <img id="logo" src="./imgs/nyg logo.png" alt="logopng" /> -->
     <!-- Title -->
-    <h1>Nemanja Njegovanović - [Dizajner, Kreator, Video Montažer]</h1>
+    <h1>Nemanja Njegovanović - [Dizajner, Kreator Sadržaja, Video Montažer]</h1>
     <!-- Description -->
     <p>
       Posjedovanje višegodišnjeg iskustva u vezi grafičkog dizajna, montaže
       video isječaka, uređivanja i komponovanja fotografija i front-end web
-      kodiranja omogućava mi da Vam pomognem da realizujete svoje želje i ideje
-      na konkretan i profesionalan način. Možete me kontaktirati pomoću
-      telefonskog broja, e-mail adrese ili jednostavno pomoću obrasca na kraju
-      stranice:
+      kodiranja omogućava mi da Vam poslužim pri realizaciji svojih kreativnih
+      želja i ideja na konkretan i profesionalan način. Možete me kontaktirati
+      pomoću telefonskog broja, e-mail adrese ili jednostavno pomoću obrasca na
+      dnu stranice:
     </p>
 
     <p>+38766 / 332 - 944</p>
