--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,12 @@
         <a href="./imgs/coelum visit.png" target="_blank"
           ><img src="./imgs/coelum visit.png" alt="coelum-visit"
         /></a>
+        <a href="./imgs/Jelen_modern.png" target="_blank"
+          ><img src="./imgs/Jelen_modern.png" alt="Jelen_modern"
+        /></a>
+        <a href="./imgs/KraussMeier.png" target="_blank"
+          ><img src="./imgs/KraussMeier.png" alt="KraussMeier"
+        /></a>
       </div>
     </div>
   </body>
