KM logo, paragraph fix

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <p>
       Posjedovanje višegodišnjeg iskustva u vezi grafičkog dizajna, montaže
       video isječaka, uređivanja i komponovanja fotografija i front-end web
-      kodiranja omogućava mi da Vam poslužim pri realizaciji svojih kreativnih
+      kodiranja omogućava mi da Vam poslužim pri realizaciji Vaših kreativnih
       želja i ideja na konkretan i profesionalan način. Možete me kontaktirati
       pomoću telefonskog broja, e-mail adrese ili jednostavno pomoću obrasca na
       dnu stranice:
