--- a/index.html
+++ b/index.html
@@ -77,16 +77,32 @@
       <br />
       <div class="portfolio-item">
         <h3>Creative Design</h3>
-        <img
-          src="./imgs/kolaz.jpg"
-          alt="Portfolio Item 2"
-          class="project-image large"
-        />
-        <img
-          src="./imgs/kolazsmall.jpg"
-          alt="Portfolio Item 2"
-          class="project-image small"
-        />
+        <div>
+          <img
+            src="./imgs/kolaz.jpg"
+            alt="Portfolio Item 2"
+            class="overunder large"
+          />
+          <img
+            src="./imgs/kolazpre.jpg"
+            alt="Portfolio Item 2"
+            class="overunder project-image large"
+          />
+        </div>
+        <div class="spacer1"></div>
+        <div>
+          <img
+            src="./imgs/kolazsmall.jpg"
+            alt="Portfolio Item 2"
+            class="overunder small"
+          />
+          <img
+            src="./imgs/kolazpresmall.jpg"
+            alt="Portfolio Item 2"
+            class="overunder project-image small"
+          />
+        </div>
+        <div class="spacer2"></div>
         <p>
           Seeking a creative touch for your projects? Look no further! I bring
           innovation and fresh ideas to every design. Whether it's revamping a
@@ -137,16 +153,32 @@
       <br />
       <div class="portfolio-item">
         <h3>Website Creation</h3>
-        <img
-          src="./imgs/page.png"
-          alt="Portfolio Item 4"
-          class="project-image large"
-        />
-        <img
-          src="./imgs/pagesmall.png"
-          alt="Portfolio Item 4"
-          class="project-image small"
-        />
+        <div>
+          <img
+            src="./imgs/page.png"
+            alt="Portfolio Item 4"
+            class="overunder large"
+          />
+          <img
+            src="./imgs/pagetext.jpg"
+            class="overunder project-image large"
+            alt="Portfolio Item 3"
+          />
+        </div>
+        <div class="spacer1"></div>
+        <div>
+          <img
+            src="./imgs/pagesmall.png"
+            alt="Portfolio Item 4"
+            class="overunder small"
+          />
+          <img
+            src="./imgs/pagetextsmall.jpg"
+            class="overunder project-image small"
+            alt="Portfolio Item 3"
+          />
+        </div>
+        <div class="spacer2"></div>
         <p>
           Ready to bring your online presence to life? My website creation
           services are your gateway to a compelling digital identity. I will
