Fixed file paths

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style/indexstyle.css" />
+    <link rel="stylesheet" href="./style/indexstyle.css" />
     <title>Home</title>
   </head>
   <body>
     <div class="wrapper">
       <header id="header" class="flexbox font-style-1">
         <div class="flexbox">
-          <img class="logo" src="../imgs/logo-vector.svg" alt="logo vector" />
+          <img class="logo" src="./imgs/logo-vector.svg" alt="logo vector" />
           <h1>NEMANJA NJEGOVANOVIĆ</h1>
         </div>
 
@@ -27,7 +27,7 @@
           <h2 id="main-title">Nemanja Njegovanović</h2>
           <h3 id="sub-title">Web & Graphic Designer/Video Editor</h3>
           <div id="square"></div>
-          <img src="../imgs/profile.png" alt="profile" class="profile" />
+          <img src="./imgs/profile.png" alt="profile" class="profile" />
         </div>
         <br />
         <br />
