--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style/portfoliostyle.css" />
+    <link rel="stylesheet" href="./style/portfoliostyle.css" />
     <title>Contact</title>
-    <link rel="stylesheet" href="../style/contactstyle.css" />
+    <link rel="stylesheet" href="./style/contactstyle.css" />
   </head>
   <body>
     <div class="wrapper">
       <header id="header" class="flexbox font-style-1">
         <div class="flexbox">
-          <img class="logo" src="../imgs/logo-vector.svg" alt="logo vector" />
+          <img class="logo" src="./imgs/logo-vector.svg" alt="logo vector" />
           <h1>NEMANJA NJEGOVANOVIĆ</h1>
         </div>
         <div id="menu" class="flexbox">
