--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="stylesheet" href="./style/indexstyle.css" />
   </head>
   <body>
-    <h1>WORK IN PROGRESS</h1>
+    <header>
+      <div class="horizontal-center container">
+        <img id="logo" src="./imgs/logo-vector.svg" alt="" />
+        <h1 class="secondarycolor primaryfont">NEMANJA NJEGOVANOVIĆ</h1>
+      </div>
+    </header>
+
+    <article>
+      <div class="container"></div>
+    </article>
+    <aside></aside>
+    <footer>
+      <div class="horizontal-center right-align container">
+        <h1 class="secondarycolor primaryfont">drevnimonolit@gmail.com</h1>
+        <img id="logo" src="./imgs/logo-vector.svg" alt="" />
+      </div>
+    </footer>
   </body>
 </html>
