Full website redesigned, test code in place for implementing slides later on

--- a/index.html
+++ b/index.html
@@ -7,16 +7,81 @@
     <link rel="stylesheet" href="./style/indexstyle.css" />
   </head>
   <body>
-    <header>
+    <header class="horizontal-center">
       <div class="horizontal-center container">
-        <img id="logo" src="./imgs/logo-vector.svg" alt="" />
+        <img id="face" src="./imgs/face-vector.svg" alt="" />
         <h1 class="secondarycolor primaryfont">NEMANJA NJEGOVANOVIĆ</h1>
       </div>
     </header>
 
     <article>
-      <div class="container"></div>
+      <div class="container">
+        <div class="canvas">
+          <div class="canvasleft">
+            <iframe
+              id="video1"
+              src="./vids/0001-0250.webm"
+              frameborder="0"
+            ></iframe>
+            <!-- <img
+              src="./imgs/aloeveratest-xxl.png"
+              id="img-xxl"
+              class="projectimgxxl"
+              alt="aloevera"
+            />
+            <img
+              src="./imgs/aloeveratest-xl.png"
+              id="img-xl"
+              class="projectimgxl"
+              alt="aloevera"
+            />
+            <img
+              src="./imgs/aloeveratest-l.png"
+              id="img-l"
+              class="projectimgl"
+              alt="aloevera"
+            />
+            <img
+              src="./imgs/aloeveratest-m.png"
+              id="img-m"
+              class="projectimgm"
+              alt="aloevera"
+            />
+            <img
+              src="./imgs/aloeveratest-s-xs.png"
+              id="img-s-xs"
+              class="projectimgsxs"
+              alt="aloevera"
+            /> -->
+          </div>
+          <div class="canvasright">
+            <h1 id="title" class="secondarycolor primaryfont">
+              Creating Visual Identities
+            </h1>
+            <br />
+            <br />
+            <p id="desc" class="secondarycolor secondaryfont">
+              🎨✨ Elevate Your Brand with Stunning Designs! ✨🎨
+              <br />
+              <br />Looking foreye-catching graphics and a sleek website? Look
+              no further! As a versatile Graphic & Web Designer, I bring your
+              vision to life with custom designs that stand out. From logos and
+              branding to websites and social media graphics, I've got you
+              covered. <br /><br />🖌️ Logos & Branding<br />
+              💻 Website Design<br />
+              📱 Social Media Graphics <br />📷 Image Retouching and Editing<br />
+              📹 Video Editing <br /><br />Let's create something amazing
+              together! Contact me today to get started on your next project.
+            </p>
+          </div>
+        </div>
+      </div>
     </article>
+    <!-- <div id="buttons">
+      <img id="button1" src="./imgs/circle1.png" alt="" />
+      <img id="button2" src="./imgs/circle0.png" alt="" />
+      <img id="button3" src="./imgs/circle0.png" alt="" />
+    </div> -->
     <aside></aside>
     <footer>
       <div class="horizontal-center right-align container">
@@ -24,5 +89,6 @@
         <img id="logo" src="./imgs/logo-vector.svg" alt="" />
       </div>
     </footer>
+    <!-- <script src="./js/script.js"></script> -->
   </body>
 </html>
