--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>NNJ</title>
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.png" />
     <link rel="stylesheet" href="./style/indexstyle.css" />
   </head>
   <body>
